<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:id="@+id/practice_progress_complete"
        android:layout_width="0dp"
        android:layout_height="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:max="100"
        android:progressDrawable="@drawable/round_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/practice_tv_practice_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/home_bg_color"/>
    <TextView
        android:id="@+id/practice_textview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textAlignment="center"
        android:text="@string/textview_question_practice"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/practice_textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/practice_textview_question"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="@string/textview_description"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/practice_textview_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_15sdp"
        android:text="@string/hint_practice_result"/>
    <ImageView
        android:id="@+id/practice_img_record"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:src="@drawable/microphone_blue"/>
    <LinearLayout
        android:id="@+id/practice_layout_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/practice_img_record"
        android:layout_marginTop="@dimen/_5sdp">
        <ImageView
            android:id="@+id/practice_star_rating_one"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/star_blue"/>
        <ImageView
            android:id="@+id/practice_star_rating_two"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/star_blue"/>
        <ImageView
            android:id="@+id/practice_star_rating_three"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/star_blue"/>
        <ImageView
            android:id="@+id/practice_star_rating_four"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/star_blue"/>
        <ImageView
            android:id="@+id/practice_star_rating_five"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/starhalf_blue"/>
    </LinearLayout>
    <TextView
        android:id="@+id/practice_textview_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/practice_layout_rating"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:text=""/>
    <Button
        android:id="@+id/practice_button_next_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/practice_textview_result"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/next_quiz"
        android:background="@drawable/button_next_quiz"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/practice_button_done_practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/practice_textview_result"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/done_practice"
        android:background="@drawable/button_done_practice"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/practice_textview_try_again"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/practice_textview_result"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_try_again"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/practice_tv_checking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checking_answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/practice_img_record"
        app:layout_constraintBottom_toBottomOf="@id/practice_img_record"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:textAlignment="center"
        android:translationZ="2dp"
        android:background="@color/green"
        android:alpha="0.5"
        android:textColor="@android:color/black"
        android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>