<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_img_popular_word"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/icon_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/home_tv_popular_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/popular_word"
        app:layout_constraintLeft_toLeftOf="@id/home_img_popular_word"
        app:layout_constraintRight_toRightOf="@id/home_img_popular_word"
        app:layout_constraintTop_toBottomOf="@id/home_img_popular_word" />

    <ImageView
        android:id="@+id/home_img_popular_collocation"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/icon_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/home_tv_popular_collocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/popular_collocation"
        app:layout_constraintLeft_toLeftOf="@id/home_img_popular_collocation"
        app:layout_constraintRight_toRightOf="@id/home_img_popular_collocation"
        app:layout_constraintTop_toBottomOf="@id/home_img_popular_collocation" />

    <ImageView
        android:id="@+id/home_img_practice_word"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/icon_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/home_tv_practice_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/practice_word"
        app:layout_constraintLeft_toLeftOf="@id/home_img_practice_word"
        app:layout_constraintRight_toRightOf="@id/home_img_practice_word"
        app:layout_constraintTop_toBottomOf="@id/home_img_practice_word" />

    <ImageView
        android:id="@+id/home_img_challenge"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/icon_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/home_tv_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/challenge"
        app:layout_constraintLeft_toLeftOf="@id/home_img_challenge"
        app:layout_constraintRight_toRightOf="@id/home_img_challenge"
        app:layout_constraintTop_toBottomOf="@id/home_img_challenge" />
</android.support.constraint.ConstraintLayout>