<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/challenge_button_question_one"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/challenge_button_question_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="1"/>
    <ImageView
        android:id="@+id/challenge_done_question_one"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_one"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_one"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_one"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_two"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_one"
        app:layout_constraintEnd_toStartOf="@+id/challenge_button_question_three"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_one"
        android:text="2"/>
    <ImageView
        android:id="@+id/challenge_done_question_two"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_two"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_two"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_two"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_three"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_two"
        app:layout_constraintEnd_toStartOf="@id/challenge_button_question_four"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_one"
        android:text="3"/>
    <ImageView
        android:id="@+id/challenge_done_question_three"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_three"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_three"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_three"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_four"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_three"
        app:layout_constraintEnd_toStartOf="@id/challenge_button_question_five"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_one"
        android:text="4"/>
    <ImageView
        android:id="@+id/challenge_done_question_four"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_four"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_four"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_four"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_five"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_one"
        android:text="5"/>
    <ImageView
        android:id="@+id/challenge_done_question_five"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_five"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_five"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_five"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_six"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/challenge_button_question_seven"
        app:layout_constraintTop_toBottomOf="@id/challenge_button_question_one"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="6"/>
    <ImageView
        android:id="@+id/challenge_done_question_six"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_six"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_six"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_six"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_seven"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_six"
        app:layout_constraintEnd_toStartOf="@+id/challenge_button_question_eight"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_six"
        android:text="7"/>
    <ImageView
        android:id="@+id/challenge_done_question_seven"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_seven"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_seven"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_seven"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_eight"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_seven"
        app:layout_constraintEnd_toStartOf="@id/challenge_button_question_nine"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_six"
        android:text="8"/>
    <ImageView
        android:id="@+id/challenge_done_question_eight"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_eight"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_eight"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_eight"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_nine"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_eight"
        app:layout_constraintEnd_toStartOf="@id/challenge_button_question_ten"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_six"
        android:text="9"/>
    <ImageView
        android:id="@+id/challenge_done_question_nine"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_nine"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_nine"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_nine"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/challenge_button_question_ten"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/button_question_challenge"
        app:layout_constraintStart_toEndOf="@id/challenge_button_question_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_six"
        android:text="10"/>
    <ImageView
        android:id="@+id/challenge_done_question_ten"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/check_green"
        app:layout_constraintTop_toTopOf="@id/challenge_button_question_ten"
        app:layout_constraintLeft_toLeftOf="@id/challenge_button_question_ten"
        app:layout_constraintRight_toRightOf="@id/challenge_button_question_ten"
        app:layout_constraintHorizontal_bias="1"
        android:translationZ="2dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/challenge_tv_time_need_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_need_complete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.28"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/home_bg_color"/>
    <TextView
        android:id="@+id/challenge_textview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/challenge_tv_time_need_complete"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="@string/textview_question_practice"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/challenge_textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_textview_question"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="@string/textview_description"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/challenge_textview_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.56"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_15sdp"
        android:text="@string/hint_practice_result"/>
    <ImageView
        android:id="@+id/challenge_img_record"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_textview_hint"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/microphone_blue"/>
    <TextView
        android:id="@+id/challenge_textview_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_img_record"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="result"/>
    <TextView
        android:id="@+id/challenge_textview_try_again_or_continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_textview_result"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_try_again"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/challenge_tv_checking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checking_answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/challenge_img_record"
        app:layout_constraintBottom_toBottomOf="@id/challenge_img_record"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:textAlignment="center"
        android:translationZ="2dp"
        android:background="@color/green"
        android:alpha="0.5"
        android:textColor="@android:color/black"
        android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>